Ajout photos banner desktop/mobile. Correction text banner version mobile

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -3,11 +3,16 @@
 
 .banner {
   position: relative;
-  background-size: cover;
-  background-position: center;
+  width: 100%;
   height: 223px;
   border-radius: $borderRadius_large;
   margin-bottom: 3rem;
+  overflow: hidden;
+
+  &__image {
+    @include objectfitcover;
+    height: 100%;
+  }
 
   @include breakpoint(small) {
     height: 111px;
@@ -15,17 +20,39 @@
   }
 
   &__text {
-    position: relative;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     z-index: 1;
     color: $textColor_textBanner;
     text-align: center;
-    top: 50%;
+    top: 70%;
     transform: translateY(-50%);
     font-size: $fontSize_bannerText;
     font-weight: $fontWeight_strong;
 
-    @include breakpoint(small) {
-      font-size: $fontSize_bannerTextMobile;
+    &--desktop {
+      display: block;
+
+      @include breakpoint(small) {
+        display: none;
+      }
+    }
+
+    &--mobile {
+      display: none;
+
+      @include breakpoint(small) {
+        display: block;
+        font-size: $fontSize_bannerTextMobile;
+        text-align: left;
+        padding-left: 20px;
+        top: 60%;
+      }
+
+      span {
+        display: block;
+      }
     }
   }
 
@@ -35,6 +62,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: 0;
     border-radius: $borderRadius_large;
   }
 }
