--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,4 +15,7 @@ html {
     text-decoration: none !important;
     color: black;
   }
+  li {
+    list-style: none;
+  }
 }
